--- a/index.html
+++ b/index.html
@@ -1,96 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Active Media</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@600&family=Lato&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
-<body>
-
-  <header>
-    <h1>Active Media</h1>
-    <p class="tagline">Engage. Inspire. Activate.</p>
-  </header>
-
-  <nav>
-    <button id="menu-toggle">☰</button>
-    <ul id="menu">
-      <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#mission">Mission</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <section id="about" class="fade-in">
-    <h2>About Us</h2>
-    <p>Active Media is a dynamic creative agency rooted in faith, culture, and connection. We specialize in multimedia storytelling, digital strategy, and brand development that moves hearts and sparks action. Whether you're a business, ministry, or movement, we help you shine with clarity and purpose.</p>
-  </section>
-
-  <section id="services" class="fade-in">
-    <h2>What We Do</h2>
-    <div class="services">
-      <div class="card"><strong>Content Creation</strong><br>Social media, websites, campaigns—crafted to captivate and convert.</div>
-      <div class="card"><strong>Digital Marketing</strong><br>SEO, social strategy, and online ads that amplify your reach.</div>
-      <div class="card"><strong>Video Production</strong><br>Promotional, explainer, and event videos that tell your story with impact.</div>
-      <div class="card"><strong>Photography</strong><br>Visual narratives that evoke emotion and elevate your brand.</div>
-      <div class="card"><strong>Graphic Design</strong><br>Logos, branding, and design systems that reflect your identity.</div>
-    </div>
-  </section>
-
-  <section id="mission" class="fade-in">
-    <h2>Our Mission</h2>
-    <p>To activate light—through visuals, words, and strategy—that uplifts, inspires, and connects. We believe media should reflect truth, beauty, and purpose, and we partner with clients who share that vision.</p>
-  </section>
-
-  <section class="fade-in">
-    <h2>Why Choose Us</h2>
-    <ul>
-      <li><strong>Creative Expertise:</strong> A team of seasoned professionals with heart and vision.</li>
-      <li><strong>Multicultural Lens:</strong> Designs and stories that resonate across cultures and communities.</li>
-      <li><strong>Faith-Infused Creativity:</strong> We honor spiritual values while delivering modern, professional results.</li>
-      <li><strong>Personalized Service:</strong> Your goals shape our approach—every project is tailored to you.</li>
-    </ul>
-  </section>
-
-  <section id="contact" class="contact fade-in">
-    <h2>Let’s Create Something Amazing</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required><br>
-      <input type="email" placeholder="Your Email" required><br>
-      <select>
-        <option>Project Type</option>
-        <option>Branding & Identity</option>
-        <option>Video Production</option>
-        <option>Digital Marketing</option>
-        <option>Faith-Based Media</option>
-      </select><br>
-      <textarea placeholder="Your Message" rows="5" required></textarea><br>
-      <button type="submit">Send Message</button>
-    </form>
-    <p>📧 Email: <a href="mailto:[insert email]">[insert email]</a></p>
-    <p>📱 Phone: <a href="tel:[insert phone number]">[insert phone number]</a></p>
-    <p>🌐 Website: <a href="[insert website URL]">[insert website URL]</a></p>
-    <div class="social-icons">
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-    </div>
-  </section>
-
-  <footer>
-    “Let your light so shine…” – Matthew 5:16
-  </footer>
-
-  <script>
-    document.getElementById('menu-toggle').onclick = function() {
-      const menu = document.getElementById('menu');
-      menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
-    };
-  </script>
-
-</body>
-</html>
+<header>
+  <img src="logo.png" alt="Active Light Media Logo" class="logo">
+  <h1>Active Light Media</h1>
+  <p class="tagline">Engage. Inspire. Activate.</p>
+</header>
