--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <img src="logo.png" alt="Active Media Logo" class="logo">
     <h1>Active Media</h1>
-    <p class="tagline">FaitFaith in motion, Shining ThrThrough MedMedia   </p>
+    <p class="tagline">Faith in motion, Shining Through Media   </p>
   </header>
 
   <nav>
@@ -28,13 +28,13 @@
 
   <section id="about" class="fade-in">
     <h2>About Us</h2>
-    <p>Active Media is a dynamic creative agency rooted in faith, culture, and connection. We specialize in multimedia storytelling, digital strategy, and brand development that moves hearts and sparks action. Whether you©re a business, ministry, or movement, we help you shine with clarity and purpose.</p>
+    <p>Active Media is a dynamic creative agency rooted in faith, culture, and connection. We specialize in multimedia storytelling, digital strategy, and brand development that moves hearts and sparks action. Whether youï¿½re a business, ministry, or movement, we help you shine with clarity and purpose.</p>
   </section>
 
   <section id="services" class="fade-in">
     <h2>What We Do</h2>
     <div class="services">
-      <div class="card"><strong>Content Creation</strong><br>Social media, websites, campaignsÐcrafted to captivate and convert.</div>
+      <div class="card"><strong>Content Creation</strong><br>Social media, websites, campaignsï¿½crafted to captivate and convert.</div>
       <div class="card"><strong>Digital Marketing</strong><br>SEO, social strategy, and online ads that amplify your reach.</div>
       <div class="card"><strong>Video Production</strong><br>Promotional, explainer, and event videos that tell your story with impact.</div>
       <div class="card"><strong>Photography</strong><br>Visual narratives that evoke emotion and elevate your brand.</div>
@@ -44,7 +44,7 @@
 
   <section id="mission" class="fade-in">
     <h2>Our Mission</h2>
-    <p>To activate lightÐthrough visuals, words, and strategyÐthat uplifts, inspires, and connects. We believe media should reflect truth, beauty, and purpose, and we partner with clients who share that vision.</p>
+    <p>To activate lightï¿½through visuals, words, and strategyï¿½that uplifts, inspires, and connects. We believe media should reflect truth, beauty, and purpose, and we partner with clients who share that vision.</p>
   </section>
 
   <section class="fade-in">
@@ -53,7 +53,7 @@
       <li><strong>Creative Expertise:</strong> A team of seasoned professionals with heart and vision.</li>
       <li><strong>Multicultural Lens:</strong> Designs and stories that resonate across cultures and communities.</li>
       <li><strong>Faith-Infused Creativity:</strong> We honor spiritual values while delivering modern, professional results.</li>
-      <li><strong>Personalized Service:</strong> Your goals shape our approachÐevery project is tailored to you.</li>
+      <li><strong>Personalized Service:</strong> Your goals shape our approachï¿½every project is tailored to you.</li>
     </ul>
   </section>
 
@@ -72,9 +72,9 @@
       <textarea placeholder="Your Message" rows="5" required></textarea><br>
       <button type="submit">Send Message</button>
     </form>
-    <p> Email: <a href="mailtoAllan.Banare@kinabank.com.pginsert email]</a></p>
+    <p> Email: <a href="mailto:[Allan.Banare@kinabank.com.pg"></a>insert email]</a></p>
     <p> Phone: <a href="tel:[675+73669575 ]">[insert phone number]</a></p>
-    <p> Website: <a hrefhttps://moreatom038-a11y.github.io/Active-Media-/insert website URL]</a></p>
+    <p> Website: <a href="https://moreatom038-a11y.github.io/Active-Media-/insert website URL]</a></p>
     <div class="social-icons">
       <a href="#"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-youtube"></i></a>
@@ -83,13 +83,13 @@
   </section>
 
   <footer>
-    ªLet your light shine¼º ± Matthew 5:16
+    ï¿½Let your light shineï¿½ï¿½ ï¿½ Matthew 5:16
   </footer>
 
   <script>
-    document.getElementById(©menu-toggle©).onclick = function() {
-      const menu = document.getElementById(©menu©);
-      menu.style.display = menu.style.display === ©block© ? ©none© : ©block©;
+    document.getElementById(ï¿½menu-toggleï¿½).onclick = function() {
+      const menu = document.getElementById(ï¿½menuï¿½);
+      menu.style.display = menu.style.display === ï¿½blockï¿½ ? ï¿½noneï¿½ : ï¿½blockï¿½;
     };
   </script>
 
